@@ -3,6 +3,7 @@
 - :authorized-routes => :unsecured-routes
 	- should be a bidi route map to :ok handlers (enforced on system start)
 	- top level files are always unsecured
+	- root route "/" is also always unsecured
 	- to unsecure a whole sub-route (eg: the js folder)
 		use bidi's catch-all routes, eg: `{"/js" {true :ok}}`
 - Open id mock will now deal with multiple users.
